2005-12-15  Robert Fleming  <fleming@cs.washington.edu>

	* libxml++/nodes/node.cc:
	* libxml++/nodes/node.h: Add find() overload that 
	takes namespaces to register, using xmlXPathRegisterNs().
	Bug #323935.

2005-12-15  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/nodes/node.cc: set_namespace(): Pass 0 to 
	xmlSearchNs() for empty (default) namespaces, instead of 
	an empty string, as we do elsewhere. This makes 
	Document::create_root_node() for when not specifying a 
	namespace. Bug #318186 from Erik Oestby.

2005-12-15  Vadim Zeitlin  <vadim@wxwindows.org >

	* docs/reference/Doxyfile.in: Fix paths so buildir!=srcdir 
	builds work. Bug #319863.

2005-09-21  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++.spec.in: Fixed include and .pc paths. Fixes #316827.

This is the HEAD branch, for API additions. See also the gnome-2-12 branch.

2.12.0:

2005-08-26  Christophe de Vienne  <cdevienne@gmail.com>

	* libxml++/parsers/textreader.h: Added xmlReadState "Reading" as
	suggested by Sebastian Moss.

2.11.0:

2005-08-25  YS <yselkowitz@users.sourceforge.net>

	* libxml++/Makefile.am: Changed link order to solve a link issue
	on cygwin. Bug #314419.

2005-06-13  Marek Rouchal  <marek.rouchal@infineon.com>

	* libxml++/io/istreamparserinputbuffer.cc:
	* libxml++/io/istreamparserinputbuffer.h:
	* libxml++/io/parserinputbuffer.cc:
	* libxml++/io/parserinputbuffer.h: Remove extra ;s.
	Bug #307481

2005-05-15  Murray Cumming <murrayc@murrayc.com>

	* libxml++/document.h: Add comments about possibly deriving this 
	from Node, though it needs investigation, and we can not do this 
	in the stable API.
	* libxml++/nodes/node.cc: get_namespace(), get_namespace_prefix(): 
	Return an empty string if the node is actually a Document, because 
	the underlying xmlDocument struct has no ns field. This should 
	prevent the crash in bug #161825.

2005-05-15  Murray Cumming <murrayc@murrayc.com>

	* docs/index.html: Add link to the LGPL text.
