@@ -1,3 +1,8 @@
+2005-12-16  Murray Cumming  <murrayc@murrayc.com>
+
+	* libxml++/document.h: Minor grammar fixes in documentation.
+	* libxml++/nodes/node.h: Correct find() documentation slightly.
+
 2005-12-15  Robert Fleming  <fleming@cs.washington.edu>
 
 	* libxml++/nodes/node.cc:
